// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/songs/_id/index.vue snapshot test renders "Edit" button if admin 1`] = `
<section class="section">
  <h1 class="title">MAKE IT BETTER</h1>
  <h2 class="subtitle">mitsu-O! / DDR 1st</h2>
  <h2 class="subtitle">BPM 119</h2>
  <div class="buttons"><a type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-pencil-box"></i></span><span>
      編集
    </span>
      <!---->
    </a></div>
  <div class="content columns is-multiline">
    <chartdetail-stub song="[object Object]" chart="[object Object]" open="true" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
  </div>
  <div class="content columns is-multiline">
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
  </div>
</section>
`;

exports[`pages/songs/_id/index.vue snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">MAKE IT BETTER</h1>
  <h2 class="subtitle">mitsu-O! / DDR 1st</h2>
  <h2 class="subtitle">BPM 119</h2>
  <!---->
  <div class="content columns is-multiline">
    <chartdetail-stub song="[object Object]" chart="[object Object]" open="true" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
  </div>
  <div class="content columns is-multiline">
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
    <chartdetail-stub song="[object Object]" chart="[object Object]" class="column is-half-tablet is-one-third-desktop is-one-quarter-widescreen"></chartdetail-stub>
  </div>
</section>
`;
